--- a/src/CommonStyles/Common.css
+++ b/src/CommonStyles/Common.css
@@ -30,5 +30,14 @@
   margin-bottom: -10px;
 }
 .reviw-btn{
-  
+  background-color: orangered;
+  color: white;
+  font-size: 20px;
+  font-weight: bold;
+  padding: 10px 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.reviw-btn:hover{
+  background-color: black;
 }
